"Cropped Images" Block added
Bootstrap 4.3 added

--- a/wagtail_blocks/templates/wagtail_blocks/image_text_overlay.html
+++ b/wagtail_blocks/templates/wagtail_blocks/image_text_overlay.html
@@ -2,6 +2,7 @@
 {% load wagtailcore_tags %}
 {% load static from staticfiles %}
 
+<link href="{% static "wagtail_blocks/bootstrap.min.css" %}?v={{ VERSION }}" rel="stylesheet"/>
 <link href="{% static "wagtail_blocks/image_text_overlay.css" %}?v={{ VERSION }}" rel="stylesheet"/>
 
 <div class="imagebox" id="{{ block_id }}">
