Minor bug fix and enhanced documentation

--- a/wagtail_blocks/templates/wagtail_blocks/image_text_overlay.html
+++ b/wagtail_blocks/templates/wagtail_blocks/image_text_overlay.html
@@ -2,8 +2,8 @@
 {% load wagtailcore_tags %}
 {% load static from staticfiles %}
 
-<link href="{% static " wagtail_blocks/bootstrap.min.css" %}?v={{ VERSION }}" rel="stylesheet"/>
-<link href="{% static " wagtail_blocks/image_text_overlay.css" %}?v={{ VERSION }}" rel="stylesheet"/>
+<link href="{% static 'wagtail_blocks/bootstrap.min.css' %}?v={{ VERSION }}" rel="stylesheet"/>
+<link href="{% static 'wagtail_blocks/image_text_overlay.css' %}?v={{ VERSION }}" rel="stylesheet"/>
 
 <div class="container">
     <div class="row text-center text-lg-left">
