Fix issue with Image Slider

--- a/wagtail_blocks/templates/wagtail_blocks/image_slider.html
+++ b/wagtail_blocks/templates/wagtail_blocks/image_slider.html
@@ -14,7 +14,7 @@
                 {% for image_item in value.image_items %}
                     <li>
                         <div class="image_title">
-                            <a href="#">{{ image_item.image.file.title }}</a>
+                            <a href="#">{{ image_item.image.title }}</a>
                         </div>
                         <a href="#">
                             <img src="{{ image_item.image.file.url }}"/>
