adjustments to support django 3.x and higher only.

--- a/wagtail_blocks/templates/wagtail_blocks/cropped_images_with_text.html
+++ b/wagtail_blocks/templates/wagtail_blocks/cropped_images_with_text.html
@@ -1,6 +1,6 @@
 {% load wagtailimages_tags %}
 {% load wagtailcore_tags %}
-{% load static from staticfiles %}
+{% load static %}
 
 <link href="{% static "wagtail_blocks/bootstrap.min.css" %}?v={{ VERSION }}" rel="stylesheet"/>
 <link href="{% static "wagtail_blocks/cropped_images_with_text.css" %}?v={{ VERSION }}" rel="stylesheet"/>
