--- a/wagtail_blocks/templates/wagtail_blocks/image_slider.html
+++ b/wagtail_blocks/templates/wagtail_blocks/image_slider.html
@@ -1,6 +1,6 @@
 {% load wagtailimages_tags %}
 {% load wagtailcore_tags %}
-{% load static from staticfiles %}
+{% load static %}
 
 <link href="{% static 'wagtail_blocks/bootstrap.min.css' %}?v={{ VERSION }}" rel="stylesheet"/>
 <script src="{% static 'wagtail_blocks/js/bootstrap.bundle.min.js' %}?v={{ VERSION }}"></script>
