--- a/wagtail_blocks/templates/wagtail_blocks/list_with_images.html
+++ b/wagtail_blocks/templates/wagtail_blocks/list_with_images.html
@@ -1,6 +1,6 @@
 {% load wagtailimages_tags %}
 {% load wagtailcore_tags %}
-{% load static from staticfiles %}
+{% load static %}
 
 <link href="{% static 'wagtail_blocks/bootstrap.min.css' %}?v={{ VERSION }}" rel="stylesheet" id="bootstrap-css"/>
 <link href="{% static 'wagtail_blocks/list_with_images.css' %}?v={{ VERSION }}" rel="stylesheet"/>
