--- a/wagtail_blocks/templates/wagtail_blocks/map.html
+++ b/wagtail_blocks/templates/wagtail_blocks/map.html
@@ -1,5 +1,5 @@
 {% load wagtailcore_tags %}
-{% load static from staticfiles %}
+{% load static %}
 {% load wagtail_html_support %}
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
