Wrap chart js in an load event

--- a/wagtail_blocks/templates/wagtail_blocks/chart.html
+++ b/wagtail_blocks/templates/wagtail_blocks/chart.html
@@ -14,6 +14,7 @@
 </div>
 
 <script>
+window.addEventListener("load",function(){
     const chart_type = '{{value.chart_type}}';
     let color_order = getRandomInt(6);
     const colors = [
@@ -79,6 +80,6 @@
             }]
         }
     }
-    })
-    ;
+    });
+})
 </script>
