Allow use of quotes in chart title

--- a/wagtail_blocks/templates/wagtail_blocks/chart.html
+++ b/wagtail_blocks/templates/wagtail_blocks/chart.html
@@ -70,7 +70,7 @@
         options: {
                 title: {
                     display: true,
-                    text: '{{value.title}}'
+                    text: '{{value.title|escapejs}}'
                 },
             scales: {
                 yAxes: [{
